# reed-setup

./: .gitignore  0-main.py  1-basic-setup.sh  2-build-code.sh  3-specialty.py  3-specialty.sh  4-hacking.sh  5-translation.sh  AA.MASTER.md  README.md  README.txt  RUNNING-LOG.md  WHAT_TO_INSTALL.yaml  launcherthing.sh  other-installs.txt  out-2-build-code.txt  switch-python-master.sh  switch-python-to-3.6.sh
CONFIG-FILES/: .viminfo  .vimrc
OpenNMT/: 02-opencl.sh  02-train-tutorial.sh  04-pretrained.sh  06-neural-net-book.sh  07-py-setup.sh  09-cuda-gpu.sh  10-opencl.sh  OpenNMT-py-setup.sh  annotations-pretrained-main.md  out-04-pretrained.txt  pred.txt  setup.sh
UBUNTU-ISSUES/: 02-terminal-not-start.txt  MASTERLOG-tenofdiamonds.txt  MASTER_LOG.txt  ulimit-follies.txt
adobe-air/: 001.sh  90-adobe-from-2011.sh
anki/: 1-setup.sh  2-setup-with-pyaudio.sh  reference.md  setup.sh
bash/: 1-basic-setup.sh  2-build-code.sh  4-hacking.sh  6-wine.sh  90-links.sh  _3-obsolete-specialty.sh  if-exists.sh  pip_gdelt_requirements.sh  pip_install_requirements.sh  pycharm.sh  rescuetime.sh
cmu-sphinx/: 001-install-pocket.sh  002-install-models.sh  003.sh  004.sh  099-run.sh  2-install-models.sh  3-clion-compile.sh  3-python-pocket.sh  96-resample.sh  97-play-raw-file.sh  98-test.sh  99-run.sh  decode-el35.txt  decode-el36.txt  decode-el38.txt  decode-el39.txt  decode-el40.txt  decode-el41.txt  decode-el42.txt  decode-el43.txt  hello_ps  hello_ps.c  old-002-models.sh
cmu-sphinx/C/: CMakeLists.txt  hello_ps.c
freeCodeCamp/: setup.sh
hacking/: demo-libgweather.c  gedit.sh  (+1 more)
(+100 files in other folders)
